fill out release notes a bit more

--- a/notes/releases/0.7.0-alpha.0.md
+++ b/notes/releases/0.7.0-alpha.0.md
@@ -157,7 +157,6 @@ Bear in mind that Blitz is still considered a “work in progress.” We have no
 
 To date, debugging Rust apps with VSCode hasn’t been particularly easy. Each combination of launch targets, flags, and arguments required a new entry into your `vscode.json` or `nvim.dap` file. With Dioxus 0.7, we wanted to improve debugging and now ship an integrated debugger. Simply press `d` and the current LLDB / DAP instance will attach to the app running under `dx serve`. By default, LLDB provides rather cryptic names and values while debugging, so we’ve built a prettifier that improves the rendering of Enums and Signals in the debugger.
 
-
 The integrated debugger works with VSCode and DAP setups and can be used to debug both the server and client simultaneously.
 
 ## Improved Version Management Experience
@@ -165,14 +164,19 @@ The integrated debugger works with VSCode and DAP setups and can be used to debu
 - one-line installer ( curl [[dioxus.dev/install.sh](http://dioxus.dev/install.sh)](http://dioxus.dev/install.sh) | sh )
 - `dx self-update` and update notifications
 
+## Dioxus Playground
+
+## Automatically open simulators
+
+## Desktop and Mobile toasts
+
+## Reduced flicker on CSS Hot-reloads
+
+## Better log coloring
+
 ## Various Quality of Life Upgrades
 
-- automatically open simulators
-- Better log coloring
-- desktop and mobile toasts
-- Reduced flicker on CSS hot-reloads
-
-Axum 0.8 Upgrade and Fullstack Improvements
+## Axum 0.8 Upgrade and Fullstack Improvements
 
 - HTML streaming now waits for the router to render
 - Axum 0.8 upgrade
