--- a/notes/releases/0.7.0-alpha.0.md
+++ b/notes/releases/0.7.0-alpha.0.md
@@ -135,7 +135,7 @@ Blitz combines a number of exciting projects to bring customizable HTML renderin
 Blitz is an extremely capable renderer, often producing results indistinguishable from browsers like Chrome and Safari:
 
 
-Not every CSS feature is supported yet, with some bugs like incorrect writing direction or the occasional layout quirk. Our support matrix is here: https://blitz-website.fly.dev/support-matrix
+Not every CSS feature is supported yet, with some bugs like incorrect writing direction or the occasional layout quirk. Our support matrix is here: https://blitz-website.fly.dev/status/css
 
 The samples that Blitz can create are quite incredible. Servo’s website:
 
@@ -161,7 +161,7 @@ The integrated debugger works with VSCode and DAP setups and can be used to debu
 
 ## Improved Version Management Experience
 
-- one-line installer ( curl [[dioxus.dev/install.sh](http://dioxus.dev/install.sh)](http://dioxus.dev/install.sh) | sh )
+- one-line installer
 - `dx self-update` and update notifications
 
 ## Dioxus Playground
