--- a/notes/releases/0.7.0-alpha.0.md
+++ b/notes/releases/0.7.0-alpha.0.md
@@ -29,13 +29,13 @@ Dioxus 0.7 also brings a number of other exciting new features:
 
 Plus, a number of quality-of-life upgrades:
 
-- one-line installer ( curl [[dioxus.dev/install.sh](http://dioxus.dev/install.sh)](http://dioxus.dev/install.sh) | sh )
+- one-line installer
 - `dx self-update` and update notifications
 - automatically open simulators
 - `dx` compatibility with non-dioxus projects
 - Better log coloring
 - desktop and mobile toasts
-- improved website landing page and migration to [`[dioxus.dev](http://dioxus.dev/)`](http://dioxus.dev) hostname
+- improved website landing page and migration to dioxus.dev
 - Reduced flicker on CSS hot-reloads
 - HTML streaming now waits for the router to render
 - Axum 0.8 upgrade
